proejct folder tab alignment issue

--- a/modal-style.scss
+++ b/modal-style.scss
@@ -177,6 +177,7 @@
           position: sticky;
           top: 0;
           z-index: 100;
+          text-align: center;
           .tab{
             background-color: rgb(184, 181, 181);
             border: 2px solid rgb(79, 79, 79);
